2006-01-31  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* aclocal.m4: Check for {late,last,early}-package-hiearchies if
	`late-packages' is not bound (which indicates we are dealing with
	XEmacs 21.5).

2006-01-28  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* tex-jp.el (TeX-command-list): Use function ignore insted of nil
	for the third element of `separator for command menu' because
	defcustom of TeX-command-list requires the third element function.
	Reported by Ikumi Keita <ikumi@revery.net>.

2006-01-28  Ikumi Keita <ikumi@revery.net>

	* tex-buf.el (TeX-run-discard-foreground): Renamed from
	TeX-run-dviout.
	(TeX-run-dviout): alias to TeX-run-discard-foreground.

	* tex.el (TeX-command-list): Use TeX-run-discard-foreground
	instead of TeX-run-dviout.

2006-01-25  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* style/csquotes.el (LaTeX-csquotes-insert-environment): Set
	prompt for mandatory arguments.
	("csquotes"): Bring up to par with csquotes 3.2.

	* style/url.el ("url"): Support the \path macro.

2006-01-25  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* tex-buf.el (TeX-run-dviout): Undo previous change.

	* tex.el (TeX-command-list): Ditto.

2006-01-24  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (LaTeX-verbatim-macros-with-delims)
	(LaTeX-verbatim-macros-with-delims-local)
	(LaTeX-verbatim-macros-with-braces)
	(LaTeX-verbatim-macros-with-braces-local): Doc fix.
	(LaTeX-verbatim-environments, LaTeX-verbatim-environments-local):
	Doc fix.  Make the correct variable buffer-local.
	(LaTeX-verbatim-macros-with-delims)
	(LaTeX-verbatim-macros-with-braces, LaTeX-verbatim-environments):
	New functions.
	(LaTeX-verbatim-macro-boundaries): Find macro in case point is
	just in front of it.
	(LaTeX-verbatim-p): Doc fix.  Correct macro lookup.
	(LaTeX-fill-move-to-break-point): Do not break verbatim macros
	with braces across lines (in addition to macros with delimiters).
	For example in case of \lstinline{...} this would result in an