@@ -1,3 +1,10 @@
+2006-02-03  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* latex.el (LaTeX-enable-toolbar): New variable.
+	(LaTeX-maybe-install-toolbar): New function.
+	(TeX-latex-mode): Add LaTeX-maybe-install-toolbar to
+	tool-bar-mode-on-hook.
+
 2006-01-31  Ralf Angeli  <angeli@iwi.uni-sb.de>
 
 	* aclocal.m4: Check for {late,last,early}-package-hiearchies if
